# mr-review

./: .cursorignore  .gitignore  .release-please-manifest.json  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  release-please-config.json  test_example.py  zensical.toml
.claude/: CLAUDE.md  agent-teams-ai-setup.md  mr-review-team.json  settings.local.json
.claude/worktrees/agent-a5562504b6ee11b51/services/mr-review/: .coveragerc  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile.api  Makefile  alembic.ini  pyproject.toml
.claude/worktrees/agent-a5562504b6ee11b51/services/mr-review/api/routers/: hosts.py  repos.py  reviews.py
.claude/worktrees/agent-a5562504b6ee11b51/services/mr-review/api/schemas/: hosts.py  mrs.py  reviews.py
.claude/worktrees/agent-a5562504b6ee11b51/services/mr-review/migrations/: README.md  env.py
.claude/worktrees/agent-a5562504b6ee11b51/services/mr-review/mr_review/: main.py  settings.py
.claude/worktrees/agent-a5562504b6ee11b51/services/mr-review/mr_review/core/ai/: protocols.py
.claude/worktrees/agent-a5562504b6ee11b51/services/mr-review/mr_review/core/hosts/: entities.py  repositories.py
.claude/worktrees/agent-a5562504b6ee11b51/services/mr-review/mr_review/core/mrs/: entities.py
.claude/worktrees/agent-a5562504b6ee11b51/services/mr-review/mr_review/core/vcs/: protocols.py
.claude/worktrees/agent-a5562504b6ee11b51/services/mr-review/mr_review/infra/ai/: claude.py  openai_compat.py
.claude/worktrees/agent-a5562504b6ee11b51/services/mr-review/mr_review/infra/db/: database.py
.claude/worktrees/agent-a5562504b6ee11b51/services/mr-review/mr_review/infra/db/orm/: host.py  review.py
.claude/worktrees/agent-a5562504b6ee11b51/services/mr-review/mr_review/infra/di/: providers.py
.claude/worktrees/agent-a5562504b6ee11b51/services/mr-review/mr_review/infra/repositories/: host.py  review.py
.claude/worktrees/agent-a5562504b6ee11b51/services/mr-review/mr_review/infra/vcs/: factory.py  github.py  gitlab.py
.claude/worktrees/agent-a5562504b6ee11b51/services/mr-review/mr_review/use_cases/hosts/: create_host.py  delete_host.py  list_hosts.py  test_connection.py
.claude/worktrees/agent-a5562504b6ee11b51/services/mr-review/mr_review/use_cases/mrs/: get_mr.py  get_mr_diff.py  list_mrs.py  list_repos.py
.claude/worktrees/agent-a5562504b6ee11b51/services/mr-review/mr_review/use_cases/reviews/: create_review.py  dispatch_review.py  get_review.py  list_reviews.py  post_review.py  update_review.py
.claude/worktrees/agent-a5562504b6ee11b51/services/mr-review/tests/: conftest.py
.claude/worktrees/agent-a5562504b6ee11b51/services/mr-review/tests/integration/: test_host_repository.py  test_review_repository.py
.claude/worktrees/agent-a5562504b6ee11b51/services/mr-review/tests/unit/: test_diff_parsing.py  test_hosts_use_cases.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
services/mr-review/: .coveragerc  .dockerignore  .env.example  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile.api  Makefile  README.md  pyproject.toml
services/mr-review/mr_review/api/: config.py  entrypoint.py
services/mr-review/mr_review/api/routers/: health.py
services/mr-review/mr_review/api/routers/v1/: ai_providers.py  hosts.py  repos.py  reviews.py  system.py
services/mr-review/mr_review/api/schemas/: ai_providers.py  hosts.py  mrs.py  reviews.py
services/mr-review/mr_review/common/: constants.py  logging.py
services/mr-review/mr_review/core/ai/: protocols.py
services/mr-review/mr_review/core/ai_providers/: entities.py  repositories.py
services/mr-review/mr_review/core/hosts/: entities.py  repositories.py
services/mr-review/mr_review/core/mrs/: entities.py
services/mr-review/mr_review/core/reviews/: entities.py  repositories.py  sources.py
services/mr-review/mr_review/core/vcs/: protocols.py  url_parser.py
services/mr-review/mr_review/infra/ai/: claude.py  fence.py  openai_compat.py
services/mr-review/mr_review/infra/di/containers/: api.py
services/mr-review/mr_review/infra/di/providers/: api_config.py  repositories.py  use_cases.py  vcs.py  vcs_client.py
services/mr-review/mr_review/infra/repositories/: ai_provider.py  host.py  review.py
services/mr-review/mr_review/infra/vcs/: _diff_parser.py  bitbucket.py  cache.py  factory.py  gitea.py  github.py  gitlab.py
services/mr-review/mr_review/use_cases/ai_providers/: create_ai_provider.py  delete_ai_provider.py  list_ai_providers.py  list_provider_models.py  update_ai_provider.py
services/mr-review/mr_review/use_cases/hosts/: add_repo_by_url.py  check_connection.py  create_host.py  delete_host.py  list_hosts.py  test_connection.py  toggle_favourite_repo.py  update_host.py
services/mr-review/mr_review/use_cases/mrs/: _favourite_repos.py  get_mr.py  get_mr_diff.py  list_inbox_mrs.py  list_mrs.py  list_repos.py
services/mr-review/mr_review/use_cases/reviews/: ai_response_parser.py  context_files.py  create_code_review.py  create_iteration.py  create_review.py  delete_review.py  dispatch_review.py  get_review.py  get_review_context.py  get_review_diff.py  get_review_prompt.py  import_response.py  list_reviews.py  post_review.py  prompt_builder.py  source_resolver.py  update_review.py
services/mr-review/tests/: conftest.py
services/mr-review/tests/factories/: entities.py
services/mr-review/tests/integration/: test_host_repository.py  test_review_repository.py  test_review_repository_sources.py
services/mr-review/tests/integration/http/: conftest.py  test_hosts.py  test_reviews.py
services/mr-review/tests/unit/: test_add_repo_by_url.py  test_ai_fence.py  test_ai_provider_repo.py  test_context_files.py  test_create_code_review.py  test_create_iteration.py  test_diff_parsing.py  test_dispatch_review.py  test_dispatch_review_execute.py  test_get_review_context.py  test_hosts_use_cases.py  test_list_inbox_mrs.py  test_list_repos.py  test_post_review.py  test_post_review_source_guard.py  test_review_sources.py  test_review_use_cases.py  test_source_resolver.py  test_url_parser.py  test_vcs_branch_diff.py
(+394 files in other folders)
